# dji-onboard-vsm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vsm.conf
docker-cross-armhf/: Dockerfile  build.sh  pi.cmake  toolchain-arm64.cmake
include/: dji_defs.h  dji_vehicle.h
src/: dji_vehicle.cpp  main.cpp
